deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  labels:
    app: flask-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: ghcr.io/notlgbt/flask-app:latest
          imagePullSecrets:
            - name: github-registry-secret
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: app-config
              mountPath: /app/config
      volumes:
        - name: app-config
          configMap:
            name: flask-app-config
